--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "dependencies": {
     "peek-stream": "1.1.3",
     "pumpify": "2.0.0",
+    "through": "2.3.8",
     "through2": "3.0.1",
-    "unzipper": "0.9.7"
+    "unzipper": "0.10.1"
   },
   "devDependencies": {
-    "tap": "12.1.1"
+    "tap": "14.2.3"
   },
   "scripts": {
     "test": "tap test/*.js"
